@@ -6,6 +6,9 @@
 2021-08-13
 - Fixed missing request entity.
 - Updated the query service to enable editing query references.
+2021-08-16
+- Fixed creator param when storing query or VC by admins for 
+  the system or other users.
 
 # version 0.63.2
 2021-06-11
